# tira-ai-local

./: .gitignore  README.md  forge.config.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts
.github/workflows/: .prettierrc.json  cicd.yml
app/: forge.config.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts
app/playwright/: chess.ts  local.ts  testControls.ts
app/src/: main.ts  test.md
app/src/markdown/: test.md
app/src/renderer/: MoveSender.ts  MySocket.ts  PGNFormatter.ts  UserData.ts  app.tsx  index.html
app/src/renderer/components/: AIForm.tsx  CFourView.tsx  ChessView.tsx  GameButtons.tsx  GameSelector.tsx  Logs.tsx  MainView.tsx  MiscButtons.tsx  MoveSender.ts  MyChessboard.tsx  MyConnectFour.tsx  (+3 more)
app/src/tests/: GameButtons.test.tsx
background-service/: .pylintrc  pyproject.toml  tasks.py
background-service/src/: ai_player.py  app.py  main.py  socket_service.py
background-service/src/entities/: ai_directory.py  chess_game.py  game.py  game_logger.py  game_process.py
background-service/src/services/: game_service.py  socket_service.py
background-service/src/tests/entities/: test_ai_directory.py  test_game.py
background-service/src/tests/services/: test_game_service.py  test_socket_service.py
docs/: architecture.md  manual.md  testing.md  ui_large.xcf
src/: index.html  index.ts  main.ts
src/renderer/: app.tsx  index.html  index.ts  react-main.tsx
src/renderer/components/: MyChessboard.tsx
(+22 files in other folders)
